--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body {
     /* display: grid;
     grid-template-columns: 33% 33% 33%; */
     row-gap: 5px;
-    width: 480px;
-    height: 700px;
+    width: 500px;
+    height: 735px;
+    border-radius: 5px;
     padding: 5px;
     background: linear-gradient(145deg, #ffffff, #e6e6e6);
     /* box-shadow:  9px 9px 18px #d9d9d9,
